# odyssey

./: QUICKSTART.md  README.md  TRAINING_PIPELINE.md  examples_training.py  main.py  odyssey_dpo_pairs.jsonl  pyproject.toml  temp file.txt  training_pipeline.py
src/: odyssey_dpo_generator.py
