[project]
name = "odyssey-dpo-generator"
version = "0.1.0"
description = "DPO dataset generator from GUI-Odyssey using Hugging Face Hub data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.14.0",
    "huggingface-hub>=0.17.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
]
